        now no longer returns the passed env
      - merging --param arguments did not work (issue #3107); 
      - passing a dict to merge where the values are strings failed (issue #2961).
    - Include previously-excluded SideEffect section in User Guide.

  From Joachim Kuebart:
    - Suppress missing SConscript deprecation warning if `must_exist=False`
      is used.


RELEASE 4.0.1 - Mon, 16 Jul 2020 16:06:40 -0700

  From Rob Boehne:
    - Fix fortran tools to set SHFORTRAN variables to $FORTRAN, similarly SHF77, SHF90, SHF95,
      SHF03 and SHF08 will default to the variables $F77, $F90, $F95, $F03 and $F08 respectively.
      If you were depending on changing the value of FORTRAN (or $F[0-9][0-9]) having no effect
      on the value of SHFORTRAN, this change will break that.   The values of FORTRAN, F77, F90,
      F95, F03, F08 and SHFORTRAN, SHF77 (etc.) now are not overridden in generate if alredy set
      by the user.
    - Fix subprocess execution of 'lslpp' on AIX to produce text standard i/o.
    - Re-do the fix for suncxx tool (Oracle Studio compiler) now that only Python 3 is supported,
      to avoid decoding errors.

  From William Deegan:
    - Added Environment() variable TEMPFILEDIR which allows setting the directory which temp
      files createdby TEMPFILEMUNGE are created in.

  From Daniel Moody:
    - Added method on Node to test if its node used in SConf. (Github Issue #3626)



RELEASE 4.0.0 - Sat, 04 Jul 2020 12:00:27 +0000

  From Dirk Baechle:
    - Updated documentation toolchain to work properly under Python3, also
      removed libxslt support from the Docbook Tool. (issue #3580)
    - Added Docker images for building and testing SCons. (issue #3585)

  From James Benton:
    - Improve Visual Studio solution/project generation code to add support
      for a per-variant cppflags. Intellisense can be affected by cppflags,
      this is especially important when it comes to /std:c++* which specifies